8194937: Inconsistent behavior of --validate-modules when combined with -m and other options

Reviewed-by: mchung